Worked on getting the application to start
There are some mapping issues with Hibernate, but we see a UI and the startup
error is correctly handled.

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,12 @@
 *.ipr
 *.iws
 *.idea
+*.log
 libraries/*
 libraries-build/*
 classes/*
 target/*
 dist/*
+
+com.nervestaple.gtdinbox.properties
+data/*
