--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -11,27 +11,27 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 #log4j.appender.file.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
-log4j.rootLogger=warn, stdout
+log4j.rootLogger=debug, stdout
 
 #org.apache.commons.beanutils=info
-#org.apache.derby=info
-#log4j.logger.net.sf.hibernate=info
-com.nervestaple.gtdinbox=info
+org.apache.derby=debug
+log4j.logger.net.sf.hibernate=debug
+com.nervestaple.gtdinbox=debug
 
 ### log just the SQL
-#log4j.logger.net.sf.hibernate.SQL=info
+log4j.logger.net.sf.hibernate.SQL=debug
 
 ### log JDBC bind parameters ###
-#log4j.logger.net.sf.hibernate.type=info
+log4j.logger.net.sf.hibernate.type=debug
 
 ### log schema export/update ###
-#log4j.logger.net.sf.hibernate.tool.hbm2ddl=info
+log4j.logger.net.sf.hibernate.tool.hbm2ddl=debug
 
 ### log cache activity ###
-#log4j.logger.net.sf.hibernate.cache=info
+log4j.logger.net.sf.hibernate.cache=debug
 
 ### log prepared statement cache activity ###
-#log4j.logger.net.sf.hibernate.ps.PreparedStatementCache=info
+log4j.logger.net.sf.hibernate.ps.PreparedStatementCache=debug
 
 ### enable the following line if you want to track down connection leakages when using DriverManagerConnectionProvider
-#log4j.logger.net.sf.hibernate.connection.DriverManagerConnectionProvider=trace
+log4j.logger.net.sf.hibernate.connection.DriverManagerConnectionProvider=trace
