--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <name>GTD Inbox</name>
     <version>1.0</version>
 
+    <properties>
+        <skipTests>true</skipTests>
+    </properties>
+
     <profiles>
         <profile>
             <id>default</id>
@@ -45,7 +49,7 @@
         <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
-            <version>2.1.1</version>
+            <version>3.1</version>
         </dependency>
         <dependency>
             <groupId>commons-configuration</groupId>
@@ -63,20 +67,19 @@
             <version>10.13.1.1</version>
         </dependency>
         <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+        <dependency>
             <groupId>net.java.dev.glazedlists</groupId>
             <artifactId>glazedlists_java15</artifactId>
             <version>1.7.0</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate</artifactId>
-            <version>3.2.3.ga</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.transaction</groupId>
-                    <artifactId>jta</artifactId>
-                </exclusion>
-            </exclusions>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.2.10.Final</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
