--- a/pom.xml
+++ b/pom.xml
@@ -251,7 +251,7 @@
                 </executions>
             </plugin>
 
-            <!-- build the native launcher -->
+            <!-- build the native launcher for Windows -->
             <plugin>
                 <groupId>com.akathist.maven.plugins.launch4j</groupId>
                 <artifactId>launch4j-maven-plugin</artifactId>
@@ -289,6 +289,25 @@
                                 <originalFilename>${project.artifactId}.exe</originalFilename>
                             </versionInfo>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- build the native launcher for Mac OS X -->
+            <plugin>
+                <groupId>sh.tak.appbundler</groupId>
+                <artifactId>appbundle-maven-plugin</artifactId>
+                <version>1.2.0</version>
+                <configuration>
+                    <mainClass>${main-class}</mainClass>
+                    <iconFile>gtdinbox.icns</iconFile>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>bundle</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
