Lots of code cleanup

--- a/src/test/resources/com.nervestaple.gtdinbox.properties
+++ b/src/test/resources/com.nervestaple.gtdinbox.properties
@@ -1,2 +1,2 @@
-storage.dir = target/test-data
-dataStorageLocation = target/test-data
+storage.dir=target/test-data
+dataStorageLocation=target/test-data
