--- a/pom.xml
+++ b/pom.xml
@@ -234,7 +234,8 @@
                 <version>${version.plugin.maven-shade}</version>
                 <configuration>
                     <transformers>
-                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                        <transformer
+                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                             <mainClass>${main-class}</mainClass>
                         </transformer>
                     </transformers>
@@ -278,7 +279,9 @@
                 <executions>
                     <execution>
                         <phase>package</phase>
-                        <goals><goal>launch4j</goal></goals>
+                        <goals>
+                            <goal>launch4j</goal>
+                        </goals>
                         <configuration>
                             <headerType>gui</headerType>
                             <outfile>target/gtdinbox.exe</outfile>
